# llvm_of_jvm

./: .gitignore  README.md  devlog.md  dune-project  llvm_of_jvm.opam  patch.c  skiptime.c
java/: Hello.java  OpTest.java  PrimitiveTemplateTYPE.txt  TestObjs.java
lib/: dune
runtime/: array.c  callit.c  obj.h  runtime.c  test_prog.c  test_runner.c
test/: dune  entry.c  llvm_of_jvm.ml
test/java/: OpTest.java  TestObjs.java
test/templates/: IntegerTemplateTYPE.java  PrimitiveTemplateTYPE.java
